--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/icono.png" />
+    <link rel="icon" type="image/x-icon" href="/icono.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Lab Salud - Laboratorio Bioquímico en Leones, Córdoba. Análisis clínicos rápidos y confiables." />
+    <meta name="description" content="Labsalud - Laboratorio Bioquímico en Leones, Córdoba. Análisis clínicos rápidos y confiables." />
     <title>Labsalud - Laboratorio Bioquímico | Leones, Córdoba</title>
   </head>
   <body>
