--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/icono.ico" />
+    <link rel="shortcut icon" href="/icono.ico">
+    <link rel="apple-touch-icon" href="/icono.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Labsalud - Laboratorio Bioquímico en Leones, Córdoba. Análisis clínicos rápidos y confiables." />
     <title>Labsalud - Laboratorio Bioquímico | Leones, Córdoba</title>
