fix: arreglo de icono para ver si aparece en los resultados de busqueda

--- a/index.html
+++ b/index.html
@@ -2,12 +2,41 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
+    <!-- Favicons optimizados para Google Search -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <link rel="shortcut icon" href="/favicon.ico">
-    <link rel="apple-touch-icon" href="/favicon.ico">
+    <link rel="icon" type="image/png" sizes="48x48" href="/favicon-48.png" />
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <!-- Google Site Verification - opcional pero recomendado -->
+    <meta name="google-site-verification" content="tu-código-de-verificación" />
+    <!-- Schema.org markup para mejorar la indexación -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Labsalud",
+      "url": "https://labsalud.com.ar",
+      "logo": "https://labsalud.com.ar/favicon-96.png",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Av del Libertador 1595",
+        "addressLocality": "Leones",
+        "addressRegion": "Córdoba",
+        "addressCountry": "AR"
+      },
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "telephone": "+543472582866",
+        "contactType": "customer service",
+        "email": "labsalud.leones@gmail.com"
+      }
+    }
+    </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Labsalud - Laboratorio Bioquímico en Leones, Córdoba. Análisis clínicos rápidos y confiables." />
+    <meta name="description" content="Labsalud - Laboratorio Bioquímico en Leones, Córdoba. Análisis clínicos rápidos y confiables con tecnología de última generación." />
     <title>Labsalud - Laboratorio Bioquímico | Leones, Córdoba</title>
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://labsalud.com.ar" />
   </head>
   <body>
     <div id="root"></div>
